# parallel-compliance-analyzer

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
agents/: __init__.py  claude_client.py
agents/deadline-tracker/: Agent.md  INSTRUCTIONS.md  deadline_agent.py
agents/income-rules/: Agent.md  INSTRUCTIONS.md  income_rules_agent.py
agents/orchestrator/: Agent.md  INSTRUCTIONS.md  orchestrator.py
agents/reporting-reqs/: Agent.md  INSTRUCTIONS.md  reporting_agent.py
agents/synthesizer/: Agent.md  INSTRUCTIONS.md  synthesizer.py
agents/violation-flags/: Agent.md  INSTRUCTIONS.md  violation_agent.py
config/: settings.py
graph/: __init__.py  pipeline.py
outputs/: irs8309report.json  irs8309report.md
sample_inputs/: sample_hud_regulation.txt
schemas/: __init__.py  models.py
skills/: __init__.py  pdf_extractor.py  section_splitter.py
skills/pdf-extractor/: SKILL.md
skills/section-splitter/: SKILL.md
