[tool.poetry]
name = "parallel-compliance-analyzer"
version = "0.1.0"
description = "Fan-out multi-agent compliance document analyzer for HUD/LIHTC regulations"
authors = ["Your Name"]
readme = "README.md"
packages = [
    { include = "agents" },
    { include = "graph" },
    { include = "schemas" },
    { include = "skills" },
    { include = "config" },
]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"
langchain-anthropic = "^0.2.0"
anthropic = "^0.34.0"
pdfplumber = "^0.10.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
rich = "^13.0.0"
langgraph-checkpoint-sqlite = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
